# empresa

mae_description/: CMakeLists.txt  package.xml
mae_description/launch/: mae_base_description.launch.py
mae_description/urdf/: generate_urdf.sh  mae_oak_d.xacro  mae_v2.urdf  mae_v2.xacro
scout_mini_description/: CMakeLists.txt  package.xml
scout_mini_description/launch/: display_mini_models.launch  display_scout_mini.launch  gazebo.launch
scout_mini_description/urdf/: scout_mini.gazebo  scout_mini.urdf  scout_mini.xacro  scout_mini_wheel_1.xacro  scout_mini_wheel_2.xacro  scout_mini_wheel_3.xacro  scout_mini_wheel_4.xacro
